# WeatherAPP

./: .gitignore  CMakeLists.txt  README.MD  setup.sh
.cache/clangd/index/: App.cpp.6CD3906259F875D4.idx  JSONUtils.cpp.F13BD4F64991EB68.idx  JSONUtils.h.5026B8D80049EB71.idx  WeatherAPI.cpp.174F9B3B8B8C5261.idx  WeatherAPI.h.77FF67EFE48C8014.idx  clock.cpp.6435685F8F54564E.idx  clock.h.43C80FAF3093A477.idx  main.cpp.DB454A2A897BA58C.idx  strFormatUtils.cpp.BB09A5D038C28C45.idx  updater.cpp.935582C9660DFD86.idx  updater.h.FD0A3CF321760776.idx  weatherBlock.cpp.8B3377DAEAC8B308.idx  weatherBlock.h.DED123523D29B588.idx  window.cpp.C2DB86EC905176C5.idx  window.h.EBB7C0E7C19F75A7.idx
.data/: weatherData.json
inc/: JSONUtils.h  WeatherAPI.h  clock.h  strFormatUtils.h  weatherBlock.h  window.h
src/: App.cpp  JSONUtils.cpp  WeatherAPI.cpp  clock.cpp  main.cpp  strFormatUtils.cpp  weatherBlock.cpp  window.cpp
ui/: main.qml  tmp.txt  weather.qrc
ui/components/: WeatherHeader.qml  WeatherInfo.qml  main.qml
